JumpScript/tests/baselines/reference/extendsClauseAlreadySeen.errors.txt
tests/cases/compiler/extendsClauseAlreadySeen.jump(4,19): error TS1172: 'extends' clause already seen.


==== tests/cases/compiler/extendsClauseAlreadySeen.jump (1 errors) ====
    class C {
    
    }
    class D extends C extends C {
                      ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
        baz() { }
    }